[package]

name = "rwlock2"
version = "0.2.5"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-rwlock2.git"
description = "A temporary fork of std::sync::RwLock with new APIs."
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2"
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
rand = "0.3"

